--- a/web3-bookLibrary/package.json
+++ b/web3-bookLibrary/package.json
@@ -26,6 +26,7 @@
     ]
   },
   "dependencies": {
+    "@web3-react/core": "^6.1.9",
     "bootstrap": "^5.2.0",
     "ethers": "^5.7.2",
     "md5": "^2.3.0",
@@ -34,6 +35,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.54.0",
-    "wagmi": "^0.10.10"
+    "wagmi": "^0.10.10",
+    "web3": "^1.8.2"
   }
 }
